--- a/App/build.gradle
+++ b/App/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     compile project(':GoodsCenter')
     compile project(':OrderCenter')
     compile project(':PaySDK')
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
+    testCompile 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.1.1'
 }
 repositories {
     mavenCentral()
